# xnd-all

./: .appveyor.yml  .appveyor_conda.yml  .travis.yml  CONTRIBUTING.txt  INSTALL.txt  Makefile  README.rst  configure  configure.ac  install.sh  setup.py
doc/: Makefile  conf.py  index.rst
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/_build/html/.doctrees/: environment.pickle  index.doctree
doc/_build/html/.doctrees/gumath/: Installation.doctree  functions.doctree  (+1 more)
doc/_build/html/_static/: documentation_options.js
doc/_build/html/gumath/: Installation.html  functions.html  index.html
doc/_build/html/installation/: index.html
doc/_build/html/libgumath/: data-structures.html  functions.html  index.html  kernels.html
doc/_build/html/libxnd/: data-structures.html  functions.html  index.html
doc/_build/html/releases/: index.html
doc/_build/html/xnd/: Installation.html  align-pack.html  buffer-protocol.html  index.html  quickstart.html  types.html
doc/_build/html/xndtools/: Installation.html  index.html
doc/gumath/: Installation.rst  c-api.rst  functions.rst  index.rst
doc/installation/: index.rst
doc/libgumath/: data-structures.rst  index.rst
doc/libndtypes/: index.rst
doc/libxnd/: index.rst
doc/tutorials/: index.rst  naive_bayes.rst  neural_net_gpu_dask.rst
doc/xnd/: Installation.rst  index.rst
doc/xndtools/: Installation.rst
ndtypes/libndtypes/tests/: test.h
python/: README.txt
python/test/: README.txt
scripts/: check_upload.py  conda-install.bat  conda-install.sh
(+32 files in other folders)
